--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -95,7 +95,7 @@ Zunächst werden die Literaturangaben in einer \textbf{\texttt{.bib}}-Datei (lit
 
 Es folgt ein Beispiel für eine \textbf{\texttt{literatur.bib}}-Datei:
 
-\begin{lstlisting}[language={[LaTeX]TeX}, caption={Beispiel für eine \texttt{.bib}-Datei}]
+\begin{lstlisting}[language={[LaTeX]TeX}]
 @book{buch1,
   author    = {Anna Beispiel and Bernd Mustermann and Carla Demo},
   title     = {Fortgeschrittene LaTeX-Techniken},
