--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,7 @@
     stepnumber=1,                       % Jede Zeile nummerieren
     lineskip=0pt,                       % Zeilenabstand anpassen
     numberstyle=\footnotesize,          % Kleine Zeilennummern
-    basicstyle=\ttfamily,               % Monospace-Schriftart
+    basicstyle=\normalsize\ttfamily,    % Monospace-Schriftart
     keywordstyle=\color{blue},          % Keywords blau
     commentstyle=\color{gray},          % Kommentare grau
     stringstyle=\color{green},          % Strings grün
