--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -556,7 +556,6 @@ Mit Hilfe der \textbf{\texttt{subfigure}}-Umgebung können durch geschicktes Ane
 \newpage
 
 \subsection{Tabellen}
-\textcolor{red}{\LARGE hier geht es weiter}
 
 In \LaTeX{} gibt es mehrere Möglichkeiten, Tabellen zu erstellen. Im Folgenden werden die wichtigsten Möglichkeiten und Optionen vorgestellt.
 
@@ -609,6 +608,8 @@ In dem folgenden Beispiel werden zudem die Möglichkeiten doppelter horizontaler
         \label{tab:einfache_tabelle}
     \end{table}
 \end{minipage}
+
+\textcolor{red}{\Large Hier gehts weiter}
 
 Mit dem Paket \textbf{\texttt{hhline}} können Linien selektiv gezeichnet werden. Dies kann mit dem Befehl \textbf{\texttt{\textbackslash hhline\{...\}}} erreicht werden.
 Die Optionen sind \textbf{\texttt{|}}, \textbf{\texttt{-}}, \textbf{\texttt{=}} und \textbf{\texttt{\textasciitilde}} für vertikale, horizontale, doppelte horizontale und keine Linien.
