--- a/kapitel/erste_schritte.tex
+++ b/kapitel/erste_schritte.tex
@@ -32,10 +32,10 @@ Die Kopf- und Fußzeilen können mit dem Paket \textbf{fancyhdr} besonders elega
 
 Als Position sind die folgenden Angaben möglich:
 \begin{itemize}
-  \item \textbf{C} - zentriert
-  \item \textbf{L} - linksbündig
-  \item \textbf{R} - rechtsbündig
-  \item \textbf{C} / \textbf{L} / \textbf{R} in Kombination mit \textbf{E} oder \textbf{O} für gerade oder ungerade Seitenzahlen möglich
+    \item \textbf{C} - zentriert
+    \item \textbf{L} - linksbündig
+    \item \textbf{R} - rechtsbündig
+    \item \textbf{C} / \textbf{L} / \textbf{R} in Kombination mit \textbf{E} oder \textbf{O} für gerade oder ungerade Seitenzahlen möglich
 \end{itemize}
 
 Ist eine Seitennummerierung in der Form Seite X von Y gewünscht, kann dies mit dem Befehl \textbf{\texttt{\textbackslash fancyfoot[C]\{Seite \textbackslash thepage$\thicksim$von$\thicksim$\textbackslash pageref\{LastPage\}\}}} ermöglicht werden. Hierbei wird das Paket \textbf{lastpage} benötigt.
@@ -46,8 +46,8 @@ Eine Trennlinie zwischen Fußzeile und Dokument, sowie zwischen Kopfzeile und Do
 
 Manchmal ist es gewünscht auf einer Seite keine Kopf- und/oder Fußzeile zu haben. Dies ist möglich mit:
 \begin{itemize}
-  \item \textbf{\texttt{\textbackslash thispagestyle\{empty\}}} - Keine Kopf- oder Fußzeile
-  \item \textbf{\texttt{\textbackslash thispagestyle\{plain\}}} - Normale Fußzeile ohne Kopfzeile
+    \item \textbf{\texttt{\textbackslash thispagestyle\{empty\}}} - Keine Kopf- oder Fußzeile
+    \item \textbf{\texttt{\textbackslash thispagestyle\{plain\}}} - Normale Fußzeile ohne Kopfzeile
 \end{itemize}
 
 \newpage
@@ -57,23 +57,23 @@ Manchmal ist es gewünscht auf einer Seite keine Kopf- und/oder Fußzeile zu hab
 Das Inhaltsverzeichnis wird mit dem Befehl \textbf{\texttt{\textbackslash tableofcontents}} erstellt. Die Tiefe des Inhaltsverzeichnis kann mit dem Befehl \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} festgelegt werden. Dabei steht X für die \underbar{maximale Tiefe} des Inhaltsverzeichnisses und kann folgende Werte annehmen:
 
 \begin{table}[H]
-  \centering
-  \begin{tabular}{cll}
-    \toprule
-    \textbf{Wert (X)} & \textbf{Maximal nummerierte Ebene}                        \\
-    \midrule
-    -1                & Keine Nummerierung                                        \\
-    0                 & Nur \texttt{\textbackslash part\{\}}                      \\
-    1                 & Bis \texttt{\textbackslash chapter\{\}}                   \\
-    2                 & Bis \texttt{\textbackslash section\{\}}                   \\
-    3                 & Bis \texttt{\textbackslash subsection\{\}} (Standardwert) \\
-    4                 & Bis \texttt{\textbackslash subsubsection\{\}}             \\
-    5                 & Bis \texttt{\textbackslash paragraph\{\}}                 \\
-    6                 & Bis \texttt{\textbackslash subparagraph\{\}}              \\
-    \bottomrule
-  \end{tabular}
-  \caption{Nummerierungstiefe mit \texttt{secnumdepth}}
-  \label{tab:secnumdepth}
+    \centering
+    \begin{tabular}{cll}
+        \toprule
+        \textbf{Wert (X)} & \textbf{Maximal nummerierte Ebene}                        \\
+        \midrule
+        -1                & Keine Nummerierung                                        \\
+        0                 & Nur \texttt{\textbackslash part\{\}}                      \\
+        1                 & Bis \texttt{\textbackslash chapter\{\}}                   \\
+        2                 & Bis \texttt{\textbackslash section\{\}}                   \\
+        3                 & Bis \texttt{\textbackslash subsection\{\}} (Standardwert) \\
+        4                 & Bis \texttt{\textbackslash subsubsection\{\}}             \\
+        5                 & Bis \texttt{\textbackslash paragraph\{\}}                 \\
+        6                 & Bis \texttt{\textbackslash subparagraph\{\}}              \\
+        \bottomrule
+    \end{tabular}
+    \caption{Nummerierungstiefe mit \texttt{secnumdepth}}
+    \label{tab:secnumdepth}
 \end{table}
 
 Für die Anwendung dieses Befehls ist darauf zu achten, dass \textbf{\texttt{\textbackslash setcounter\{tocdepth\}\{X\}}} vor \textbf{\texttt{\textbackslash tableofcontents}} platziert werden muss.
@@ -88,10 +88,22 @@ Bei langen und umfangreichen Dokumenten ist es besonders sinnvoll, die einzelnen
 Ich persönlich strukturiere meine \LaTeX{}-Dateien in einem eigenen Ordner (kapitel) und binde sie in einer dafür vorgesehenen Datei (uebersicht.tex) ein, welche in der main.tex Datei eingefügt wird. So muss die Datei main.tex nach einmaliger Einrichtung nicht mehr verändert werden.
 
 
+\subsection{Abkürzungsverzeichnis}
+\label{sec:abkuerzungsverzeichnis_erklärung}
+
+
+
+Die \ac{API} wird häufig verwendet.
+
+.................................................................................................
+
+
 \subsection{Literaturverzeichnis}
 \label{sec:literaturverzeichnis_erklärung}
 In \LaTeX{} kann ein \hyperref[sec:literaturverzeichnis]{Literaturverzeichnis} mit Hilfe von BibTeX erstellt werden.
-Zunächst werden die Literaturangaben in einer \textbf{\texttt{.bib}}-Datei (literatur.bib) gespeichert . Vorzugsweise im gleichen Ordner wie die Hauptdatei.
+
+\subsubsection{Erstellen einer \textbf{\texttt{.bib}}-Datei}
+Zunächst werden die Literaturangaben in einer \textbf{\texttt{.bib}}-Datei (literatur.bib) gespeichert. Vorzugsweise im gleichen Ordner wie die Hauptdatei.
 
 Es folgt ein Beispiel für eine \textbf{\texttt{literatur.bib}}-Datei:
 
@@ -136,14 +148,15 @@ Es folgt ein Beispiel für eine \textbf{\texttt{literatur.bib}}-Datei:
 }
 \end{lstlisting}
 
+\subsubsection{Einbinden des Literaturverzeichnisses}
 Zunächst wird der Stil des Literaturverzeichnisses mit dem Befehl \textbf{\texttt{\textbackslash bibliographystyle\{Stil\}}} festgelegt.
 Es stehen folgende Stile zur Auswahl:
 \begin{itemize}
-  \item \textbf{plain} – Alphabetische Sortierung nach Autoren (Standardstil).
-  \item \textbf{unsrt} – Reihenfolge der Zitierung im Text (nicht alphabetisch).
-  \item \textbf{alpha} – Alphabetische Sortierung nach Autoren, aber mit Kurzreferenzen wie `[Ein05]`.
-  \item \textbf{abbrv} – Wie `plain`, aber mit abgekürzten Vornamen und Titeln.
-  \item \textbf{apalike} – Ähnlich wie APA-Zitierstil (Autor-Jahr statt Nummerierung).
+    \item \textbf{plain} – Alphabetische Sortierung nach Autoren (Standardstil).
+    \item \textbf{unsrt} – Reihenfolge der Zitierung im Text (nicht alphabetisch).
+    \item \textbf{alpha} – Alphabetische Sortierung nach Autoren, aber mit Kurzreferenzen wie `[Ein05]`.
+    \item \textbf{abbrv} – Wie `plain`, aber mit abgekürzten Vornamen und Titeln.
+    \item \textbf{apalike} – Ähnlich wie APA-Zitierstil (Autor-Jahr statt Nummerierung).
 \end{itemize}
 
 Anschließend wird die \textbf{\texttt{.bib}}-Datei mit dem Befehl \textbf{\texttt{\textbackslash bibliography\{Pfad/zur/Datei\}}} eingebunden.
