--- a/main.tex
+++ b/main.tex
@@ -107,10 +107,7 @@
 \listoffigures
 
 % Abkürzungsverzeichnis
-\section*{Abkürzungsverzeichnis}
-\begin{acronym}
-    \acro{API}{Application Programming Interface}
-\end{acronym}
+\input{abkuerzungen.tex}
 
 \newpage
 
